manifests/app/dreamkast/overlays/development/template-weaver/delete-dreamkast.yaml
$patch: delete
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dreamkast
---
$patch: delete
apiVersion: v1
kind: Service
metadata:
  name: dreamkast
