manifests/app/dreamkast/overlays/development/template-weaver/mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: dreamkast-mysql
  labels:
    app: dreamkast
spec:
  ports:
    - port: 3306
  selector:
    app: dreamkast
    tier: mysql
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dreamkast-mysql
  labels:
    app: dreamkast
spec:
  selector:
    matchLabels:
      app: dreamkast
      tier: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: dreamkast
        tier: mysql
    spec:
      containers:
      - image: mysql
        name: mysql
        args:
        - --character-set-server=utf8mb4
        - --collation-server=utf8mb4_unicode_ci
        - --default-authentication-plugin=mysql_native_password
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pv-claim
