manifests/app/dreamkast/overlays/development/template-weaver/ingress.yaml
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: dreamkast-weaver
  labels:
    app: dreamkast
    tier: dreamkast-weaver
spec:
  virtualhost:
    fqdn: __REPLACEMENT__
    tls:
      secretName: cert-manager/wildcard-dev-cloudnativedays-jp
  routes:
    - conditions:
      - prefix: /
      services:
      - name: dreamkast-weaver
        port: 8080
      cookieRewritePolicies:
      - name: _session_id
        secure: true
